--- a/src/Main/BeachTemp/BeachTemprature.css
+++ b/src/Main/BeachTemp/BeachTemprature.css
@@ -1,4 +1,4 @@
-.weatherCard card {
+.weatherCard {
   flex: 1;
   background-color: "#93ACED";
 }
@@ -46,8 +46,8 @@ a:hover {
   max-width: 500px;
   margin-top: 1rem;
   padding: 1rem;
-}
-.card-img-top {
+} */
+.card-img-top-beaches {
   position: relative !important;
   border-radius: 50% !important;
   max-width: 250px !important;
@@ -56,16 +56,14 @@ a:hover {
   right: 1rem !important;
   box-shadow: 20px 0 0 20px #f5efef !important;
   margin: 3rem;
-} */
+}
 .weatherIcons {
   height: 60px;
   width: 60px;
 }
-
 /* .input-group {
   text-align: center;
 } */
-
 #search-bar {
   margin-top: 2rem;
   width: 1000px;
@@ -93,11 +91,11 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center !important;
-  } */
+  }
   .makeStyles-margin-1 {
     margin: 8px;
     padding-left: 4rem;
-  }
+  } */
   .weatherCard {
     max-width: 250vh;
     display: flex;
@@ -106,8 +104,8 @@ a:hover {
     color: white;
     padding: 0;
   }
-  /* 
-  .input-group {
+
+  /*  .input-group {
     text-align: center;
   } */
   #search-bar {
