--- a/src/Main/BeachTemp/BeachTemprature.css
+++ b/src/Main/BeachTemp/BeachTemprature.css
@@ -1,8 +1,7 @@
-.weatherCard card {
+.weatherCard{
   flex: 1;
-  background-color: "#93ACED";
+  background-color: #93ACED;
 }
-
 a {
   color: #eb892e;
 }
@@ -10,7 +9,7 @@ a:hover {
   color: #f1e3d5;
 }
 
-.card {
+.card-beaches {
   position: relative;
   display: inline-block;
   max-width: 400px;
@@ -39,20 +38,24 @@ a:hover {
   width: 400;
   height: 300;
 }
+.weatherCard{
+  margin: 2rem;
+  margin-left: 3rem;
+}
 
-.card-title h5 {
+.title-beaches {
   margin-top: 2rem;
   font-size: 30px;
   padding: 20px 8px 0px 8px;
   font-weight: 400;
 }
-.card-text {
+.card-text-beach{
   color: #f8f0f0;
   max-width: 500px;
   margin-top: 1rem;
   padding: 1rem;
 }
-.card-img-top {
+.card-img-top-beach {
   position: relative !important;
   border-radius: 50% !important;
   max-width: 250px !important;
@@ -113,7 +116,7 @@ a:hover {
   .city {
     text-decoration: underline;
   }
-  .card-img-top {
+  .card-img-top-beach {
     position: relative !important;
     border-radius: 50% !important;
     max-width: 250px !important;
@@ -130,7 +133,7 @@ a:hover {
   .cityWeatherCards {
     padding: 1rem;
   }
-  .card-text {
+  .card-text-beach{
     color: #f8f0f0;
     margin-top: 1rem;
     padding: 1rem;
