--- a/src/Main/BeachTemp/BeachTemprature.css
+++ b/src/Main/BeachTemp/BeachTemprature.css
@@ -1,6 +1,23 @@
-.weatherCard card {
-  flex: 1;
+.weatherCardsMain {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.weatherCard {
   background-color: "#93ACED";
+  padding: 0 15px;
+  height: 415px;
+  width: 260px;
+  font-size: 20px;
+  color: white;
+  margin: 25px;
+}
+
+.searchBar {
+  justify-content: center;
+  padding: 40px 0 0 0;
 }
 
 a {
@@ -10,7 +27,17 @@ a:hover {
   color: #f1e3d5;
 }
 
-.card {
+.card-water-group {
+}
+.card-water-temp {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.card-img-top-beaches {
   position: relative;
   display: inline-block;
   max-width: 400px;
@@ -21,15 +48,7 @@ a:hover {
   padding-right: 0;
   border: none !important;
 }
-.weatherCard {
-  max-width: 200px;
-  height: 250px;
-  font-size: 20px;
-  color: white;
-}
-.searchBar {
-  justify-content: center;
-}
+
 .city {
   text-decoration: underline;
   margin: 1rem 0;
@@ -39,7 +58,7 @@ a:hover {
   height: 300;
 }
 
-.card-title h5 {
+/* .card-title h5 {
   margin-top: 2rem;
   font-size: 30px;
   padding: 20px 8px 0px 8px;
@@ -49,8 +68,8 @@ a:hover {
   max-width: 500px;
   margin-top: 1rem;
   padding: 1rem;
-}
-*/ .card-img-top-beaches {
+} */
+.card-img-top-beaches {
   position: relative !important;
   border-radius: 50% !important;
   max-width: 250px !important;
@@ -88,17 +107,18 @@ a:hover {
     flex-direction: column;
     margin: 0;
   }
-  .card-body {
+  /* .card-body {
     max-width: 300vh !important;
     height: auto;
     display: flex;
     flex-direction: column;
     align-items: center !important;
-  }
+  } */
   .makeStyles-margin-1 {
     margin: 8px;
     padding-left: 4rem;
   }
+
   .weatherCard {
     max-width: 250vh;
     display: flex;
@@ -111,7 +131,8 @@ a:hover {
   .city {
     text-decoration: underline;
   }
-  .card-img-top {
+
+  .card-img-top-beaches {
     position: relative !important;
     border-radius: 50% !important;
     max-width: 250px !important;
@@ -120,15 +141,17 @@ a:hover {
     left: 1rem !important;
     box-shadow: 20px 0 0 20px #f5efef !important;
   }
-  .card-title,
+
+  /*  .card-title,
   h5 {
     margin-top: 2rem;
     font-size: 10px;
-  }
+  } */
+
   .cityWeatherCards {
     padding: 1rem;
   }
-  .card-text {
+  /*  .card-text {
     color: #f8f0f0;
     margin-top: 1rem;
     padding: 1rem;
@@ -137,7 +160,7 @@ a:hover {
 
   .input-group {
     text-align: center;
-  }
+  } */
   #search-bar {
     margin-top: 2rem;
     width: 1000px;
