--- a/src/Main/LostAndFound/LostFound.css
+++ b/src/Main/LostAndFound/LostFound.css
@@ -11,7 +11,7 @@
   height: 400px;
 }
 
-.searchBar {
+.searchBox {
   padding-top: 150px;
 }
 
@@ -66,7 +66,7 @@
     height: 300px;
     position: absolute;
   }
-  .searchBar {
+  .searchBox {
     padding: 50px 200px;
   }
 
@@ -116,7 +116,7 @@
     position: absolute;
   }
 
-  .searchBar {
+  .searchBox {
     margin: 0;
     padding: 50px 150px;
   }
@@ -180,7 +180,7 @@
     height: 150px;
   }
 
-  .searchBar {
+  .searchBox {
     margin: 0;
     padding: 0 120px;
   }
