--- a/src/Main/BeachTemp/BeachTemprature.css
+++ b/src/Main/BeachTemp/BeachTemprature.css
@@ -1,8 +1,7 @@
-.weatherCard card {
+.weatherCard {
   flex: 1;
-  background-color: "#93ACED";
+  background-color: #93aced;
 }
-
 a {
   color: #eb892e;
 }
@@ -10,7 +9,7 @@ a:hover {
   color: #f1e3d5;
 }
 
-.card {
+.card-beaches {
   position: relative;
   display: inline-block;
   max-width: 400px;
@@ -20,7 +19,7 @@ a:hover {
   padding-top: 0;
   padding-right: 0;
   border: none !important;
-} 
+}
 
 .weatherCard {
   max-width: 200px;
@@ -39,19 +38,24 @@ a:hover {
   width: 400;
   height: 300;
 }
+.weatherCard {
+  margin: 2rem;
+  margin-left: 3rem;
+}
 
-.card-title h5 {
+.title-beaches {
   margin-top: 2rem;
   font-size: 30px;
   padding: 20px 8px 0px 8px;
+  font-weight: 400;
 }
-.card-text {
+.card-text-beach {
   color: #f8f0f0;
   max-width: 500px;
   margin-top: 1rem;
   padding: 1rem;
-} 
-.card-img-top-beaches {
+}
+.card-img-top-beach {
   position: relative !important;
   border-radius: 50% !important;
   max-width: 250px !important;
@@ -65,10 +69,9 @@ a:hover {
   height: 60px;
   width: 60px;
 }
- .input-group {
+.input-group {
   text-align: center;
-} 
-
+}
 #search-bar {
   margin-top: 2rem;
   width: 1000px;
@@ -113,7 +116,7 @@ a:hover {
   .city {
     text-decoration: underline;
   }
-  .card-img-top {
+  .card-img-top-beach {
     position: relative !important;
     border-radius: 50% !important;
     max-width: 250px !important;
@@ -130,7 +133,7 @@ a:hover {
   .cityWeatherCards {
     padding: 1rem;
   }
-  .card-text {
+  .card-text-beach {
     color: #f8f0f0;
     margin-top: 1rem;
     padding: 1rem;
