--- a/src/Main/BeachTemp/BeachTemprature.css
+++ b/src/Main/BeachTemp/BeachTemprature.css
@@ -12,7 +12,7 @@ a:hover {
 .card-beaches {
   position: relative;
   display: inline-block;
-  max-width: 400px;
+
   font-size: 25px;
   margin: 1rem 2rem;
   padding: 2rem;
@@ -124,6 +124,8 @@ a:hover {
     top: 2.5rem !important;
     left: 1rem !important;
     box-shadow: 20px 0 0 20px #f5efef !important;
+    align-items: center;
+    margin-left: -1rem;
   }
   .card-title,
   h5 {
