--- a/src/Main/BeachTemp/BeachTemprature.css
+++ b/src/Main/BeachTemp/BeachTemprature.css
@@ -12,9 +12,8 @@ a:hover {
 .card-beaches {
   position: relative;
   display: inline-block;
-
   font-size: 25px;
-  margin: 1rem 2rem;
+  margin: 1rem 0;
   padding: 2rem;
   padding-top: 0;
   padding-right: 0;
